--- a/src/dc/aoc2022/Base.cls
+++ b/src/dc/aoc2022/Base.cls
@@ -9,6 +9,7 @@ ClassMethod GetInput(fn) As %Stream
     set fn=..#Folder_fn
     set stream = ##Class(%Stream.FileCharacter).%New()
     set sc=stream.LinkToFile(fn)
+    if sc break      ;to avoid smell
     return stream
 }
 
